# gui-python-smart-tic-tac-toe-university

./: README.md  pyproject.toml  tiktaktoe.py
.github/workflows/: release.yml
src/: controller.py  logic.py  main.py  ui.py
