[project]
name = "smart-tic-tac-toe"
version = "1.0.0"
description = "A PySide6 GUI implementation of Smart Tic Tac Toe"
authors = [{ name = "Saeed Khanloo" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6",
]

[project.scripts]
tic-tac-toe = "src.main:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
